infra/ingress/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  labels:
    app: backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
spec:
  ingressClassName: alb
  rules:
    - host: api.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: gateway-cs
                port:
                  number: 8080
            path: /
            pathType: Prefix
