infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
spec:
  ingressClassName: alb
  rules:
    - host: kafkamanager.seoultravel.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-manager-svc
                port:
                  number: 12004
    - host: streamsets.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: streamsets1-cs
                port:
                  number: 18630
            path: /
            pathType: Prefix
    - host: elastic.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: elastic-hq-cs
                port:
                  number: 5000
            path: /
            pathType: Prefix
    - host: kibana.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: kibana-cs
                port:
                  number: 5601
            path: /
            pathType: Prefix
    - host: www.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: frontend-cs
                port:
                  number: 80
            path: /
            pathType: Prefix

    - host: api.seoultravel.life
      http:
        paths:
          - backend:
              service:
                name: gateway-cs
                port:
                  number: 8080
            path: /
            pathType: Prefix
